2007-05-08  Brian Cameron  <brian.cameron@sun.com>

	* daemon/verify-pam.c: Avoid starting timed login if a username
	  is already entered.  Fixes bug #436797.  Patch by Loic Minier
	  <lool+gnome@via.ecp.fr>

2007-05-02  Brian Cameron  <brian.cameron@sun.com>

	* daemon/gdm.c: Fix problem causing SET_LOGOUT_ACTION and
	  SET_SAFE_LOGOUT_ACTION to not work.

2007-05-01  Brian Cameron  <brian.cameron@sun.com>

	* daemon/gdm-daemon-config.c: Fix return of
	  gdm_daemon_config_update_key so that it returns TRUE when the
	  key is valid and FALSE when the key is not valid.  This fixes
	  the UPDATE_CONFIG command so it doesn't return an error message
	  saying it didn't recognize the key, when it fact it is a valid
	  key.  Also fixed "xdmcp/PARAMETERS" so we check return codes
	  more nicely.  Fixes bug #428657.

2007-05-01  Brian Cameron  <brian.cameron@sun.com>

	* daemon/display.[ch], daemon/server.[ch], daemon/gdm.c,
	  daemon/gdm-daemon-config.c: Rename gdm_server_alloc to
	  gdm_display_alloc since this function really initializes
	  this display structure and belonds in display.c rather
	  than in server.c.

2007-05-01  Brian Cameron  <brian.cameron@sun.com>

	* daemon/display.[ch], daemon/server.c, daemon/slave.c, 
	  daemon/gdm-daemon-config.[ch], docs/C/gdm.xml: Add optional
	  X-Gdm-XserverArgs key to the GDM desktop files.  If this is
	  set in the desktop file, then GDM will restart the Xserver
	  with the additional arguments specified.  This allows 
	  people to create sessions that require special Xserver 
	  flags (e.g. for accessibility or to use a session that
	  requires special Xserver extensions to be turned on, etc.)
	  This implements enhancement request #326771.  Patch by Ron
	  Yorston <rmy@tigress.co.uk>.  I had to rework the patch 
	  quite a bit to get it to compile against the latest code.
	  Also added a test so that any such extra arguments are
 	  *not* used when using Xnest since this "restarting"
	  feature does not work with Xnest.