@@ -1,5 +1,11 @@
 2007-05-08  Brian Cameron  <brian.cameron@sun.com>
 
+	* gui/greeter/greeter.c: Check for existance of a theme before
+	  selecting a random theme.  Fixes bug #436800.  Patch by Loic
+	  Minier <lool+gnome@via.ecp.fr>
+
+2007-05-08  Brian Cameron  <brian.cameron@sun.com>
+
 	* daemon/verify-pam.c: Avoid starting timed login if a username
 	  is already entered.  Fixes bug #436797.  Patch by Loic Minier
 	  <lool+gnome@via.ecp.fr>
